kubernetes/main/apps/default/qbittorrent/app/policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbitorrent-vpn
  namespace: default
  labels:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: qbittorrent
      app.kubernetes.io/name: qbittorrent
  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
    - toEntities:
        - cluster
